--- a/app/package.json
+++ b/app/package.json
@@ -10,13 +10,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
+    "bootstrap": "^5.3.0",
+    "buffer": "^6.0.3",
     "chart.js": "^4.3.0",
     "framer-motion": "^10.12.12",
+    "lodash": "^4.17.21",
+    "plotly.js": "^2.24.3",
+    "rc-slider": "^10.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
