--- a/app/package.json
+++ b/app/package.json
@@ -25,10 +25,12 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "source-map-explorer": "^2.5.3",
     "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
