Minor format updates

--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,9 @@
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-tooltip": "^5.18.1",
+    "serverless-mysql": "^1.5.5",
     "source-map-explorer": "^2.5.3",
+    "sql-template-strings": "^2.2.2",
     "stream": "^0.0.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
